Correct spacing errors in display text client/auth/homepage.html client/style.css

--- a/client/style.css
+++ b/client/style.css
@@ -28,7 +28,7 @@ h1 {
   font: 5em "MyWebFont";
   color: black;
   position: relative;
-  bottom: 60%;
+  bottom: 50%;
 }
 
 .title {
